<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/detailsScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="3"
        android:orientation="vertical"
        android:useDefaultMargins="true" >

        <TextView
            android:id="@+id/titleLabelViewText"
            style="@style/JobLabelTextView"
            android:layout_column="0"
            android:layout_row="0"
            android:text="@string/label_jobtitle" />

        <TextView
            android:id="@+id/titleViewText"
            android:layout_column="1"
            android:layout_row="0"
            style="@style/JobTextView"
            android:layout_width="210dp" />

        <TextView
            android:id="@+id/employerLabelViewText"
            android:layout_column="0"
            android:layout_row="1"
            android:text="@string/label_employer"
            style="@style/JobLabelTextView"
            android:freezesText="false" />

        <TextView
            android:id="@+id/employerViewText"
            android:layout_column="1"
            android:layout_row="1"
            style="@style/JobTextView"
            android:layout_width="200dp" />

        <!--TextView
            android:id="@+id/textView2"
            android:layout_column="1"
            android:layout_row="0"
            style="@style/JobTextView"
            android:layout_width="200dp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textView"
            android:layout_column="1"
            android:layout_row="0"
            style="@style/JobTextView"
            android:layout_width="210dp"
            android:layout_height="wrap_content" /-->

        <TextView
            android:id="@+id/agencyLabelViewText"
            android:layout_column="0"
            android:layout_row="2"
            android:text="@string/label_agency"
            style="@style/JobLabelTextView" />

        <TextView
            android:id="@+id/agencyViewText"
            android:layout_column="1"
            android:layout_row="2"
            style="@style/JobTextView"
            android:layout_width="210dp" />

        <!--TextView
            android:id="@+id/textView3"
            android:layout_column="1"
            android:layout_row="1"
            style="@style/JobTextView"
            android:layout_width="210dp"
            android:layout_height="wrap_content" /-->

        <TextView
            android:id="@+id/agentLabelViewText"
            android:layout_column="0"
            android:layout_row="3"
            android:text="@string/label_agent"
            style="@style/JobLabelTextView" />

        <TextView
            android:id="@+id/agentViewText"
            android:layout_column="1"
            android:layout_row="3"
            style="@style/JobTextView"
            android:layout_width="210dp" />

        <TextView
        android:id="@+id/phoneLabelViewText"
        android:layout_column="0"
        android:layout_row="4"
        android:text="@string/label_phone"
        style="@style/JobLabelTextView" />

        <TextView
            android:id="@+id/phoneViewText"
            android:layout_column="1"
            android:layout_row="4"
            style="@style/JobTextView"
            android:layout_width="210dp" />

        <ImageButton
            android:id="@+id/btnNumber"
            android:layout_width="wrap_content"
            android:src="@drawable/phone_icon40"
            android:background="?android:attr/selectableItemBackground"
            android:layout_column="2"
            android:layout_row="4"
            android:layout_height="40dp"
            android:minHeight="167dp"
            android:layout_marginLeft="0dp" />

        <TextView
            android:id="@+id/emailLabelViewText"
            android:layout_column="0"
            android:layout_row="5"
            android:text="@string/label_email"
            style="@style/JobLabelTextView" />

        <TextView
            android:id="@+id/emailViewText"
            android:layout_column="1"
            android:layout_row="5"
            style="@style/JobTextView"
            android:layout_width="210dp" />

        <ImageButton
            android:id="@+id/btnEmail"
            android:layout_width="wrap_content"
            android:src="@drawable/email_icon40"
            android:background="?android:attr/selectableItemBackground"
            android:layout_column="2"
            android:layout_row="5"
            android:layout_height="40dp"
            android:minHeight="179dp"
            android:layout_marginLeft="0dp"
            android:layout_gravity="center_vertical" />

        <TextView
        android:id="@+id/interviewLabelViewText"
        android:layout_column="0"
        android:layout_row="6"
        android:text="@string/label_interview"
        style="@style/JobLabelTextView" />

        <TextView
            android:id="@+id/interviewViewText"
            android:layout_column="1"
            android:layout_row="6"
            style="@style/JobTextView"
            android:layout_width="210dp" />

        <TextView
            android:id="@+id/interviewDateLabelViewText"
            android:layout_column="0"
            android:layout_row="7"
            android:text="@string/label_interview_date"
            style="@style/JobLabelTextView"
            android:maxWidth="60dp" />

        <TextView
            android:id="@+id/interviewDateViewText"
            android:layout_column="1"
            android:layout_row="7"
            style="@style/JobTextView"
            android:layout_width="210dp" />

        <TextView
            android:id="@+id/jobSpecLabelViewText"
            android:layout_column="0"
            android:layout_row="8"
            android:text="@string/label_jobspec"
            android:gravity="center_vertical"
            style="@style/JobLabelTextView" />

        <ImageButton
            android:id="@+id/jobSpecView"
            android:layout_width="wrap_content"
            android:layout_column="1"
            android:layout_row="8"
            android:background="?android:attr/selectableItemBackground"
            android:layout_height="wrap_content" />

    </GridLayout>


</ScrollView>
